# ferrocv

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONSTITUTION.md  Cargo.toml  Makefile  README.md  SECURITY.md  TODO.md  _typos.toml  deny.toml  release-please-config.json
.github/: dependabot.yml
.github/actions/setup-ferrocv/: action.yml
.github/workflows/: action-test.yml  auto-rebase.yml  ci.yml  codeql.yml  fuzz.yml  release-please.yml  release.yml  scorecard.yml
assets/schema/: SOURCE.md
assets/themes/: VENDORING_CHECKLIST.md
assets/themes/basic-resume/: VENDORING.md  basic-resume.typ  resume.typ
assets/themes/fantastic-cv/: VENDORING.md  fantastic-cv.typ  resume.typ
assets/themes/html-minimal/: LICENSE  resume.typ
assets/themes/modern-cv/: VENDORING.md  lib.typ  resume.typ
assets/themes/text-minimal/: resume.typ
assets/themes/typst-jsonresume-cv/: LICENSE  VENDORING.md  base.typ  resume.typ
docs/: adapters.md
docs/adr/: 0001-docx-strategy.md  README.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: parse.rs  validate.rs
research/: 44-html-viability.md
src/: cli.rs  lib.rs  main.rs  package_cache.rs  render.rs  test_env.rs  theme.rs  validate.rs
src/install/: cache.rs  extract.rs  fetch.rs  manifest.rs  mod.rs  pipeline.rs  spec.rs
tests/: install_boundary.rs  install_cli.rs  offline_guard.rs  render.rs  render_cli.rs  render_html.rs  render_preview_cli.rs  render_text.rs  render_theme.rs  schema_embedding.rs  themes_cli.rs  validate_cli.rs  validate_unit.rs
tests/fixtures/: invalid_array_item_type.json  invalid_bad_date_format.json  invalid_bad_email_format.json  invalid_bad_url_format.json  invalid_nested_wrong_type.json  invalid_wrong_type_email.json  local-theme.typ  render_full.json  render_sparse.json  valid_full.json  valid_minimal.json
tests/fixtures/cached-preview-malicious/imports-another-package/1.0.0/: README.md  typst.toml
tests/fixtures/cached-preview-malicious/imports-another-package/1.0.0/src/: lib.typ
tests/fixtures/cached-preview/basic-resume/0.2.8/: README.md  typst.toml
tests/fixtures/cached-preview/basic-resume/0.2.8/src/: helpers.typ  lib.typ
tests/goldens/: basic-resume-sparse.txt  basic-resume.txt  fantastic-cv-sparse.txt  fantastic-cv.txt  modern-cv-sparse.txt  modern-cv.txt  text-minimal-sparse.txt  text-minimal.txt  typst-jsonresume-cv-sparse.txt  typst-jsonresume-cv.txt
