[package]
name = "ferrocv"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
description = "Render JSON Resume documents to PDF, HTML, and plain text via embedded Typst."
license = "MIT OR Apache-2.0"
repository = "https://github.com/cacack/ferrocv"
readme = "README.md"
keywords = ["resume", "cv", "json-resume", "typst", "pdf"]
categories = ["command-line-utilities"]
include = [
    "src/**/*",
    "assets/schema/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE-*",
]

[lib]
name = "ferrocv"
path = "src/lib.rs"

[[bin]]
name = "ferrocv"
path = "src/main.rs"

[dependencies]
# CLI argument parsing. Derive API keeps the surface declarative.
clap = { version = "4", features = ["derive"] }
# JSON Schema validator. Default features pull in `reqwest` for remote
# `$ref` resolution; we disable them to uphold CONSTITUTION.md §6
# (no network calls at validate time) since our schema is vendored
# and self-contained.
jsonschema = { version = "0.46", default-features = false }
# CLI-layer error propagation. Library code stays anyhow-free.
anyhow = "1"
serde_json = "1"
# Embedded Typst compiler — produces PDF bytes entirely in-process.
# CONSTITUTION.md §2 forbids subprocessing the `typst` CLI, so we link
# the library directly. Pinned to 0.13.1 (next minor 0.14.x is available
# now that MSRV is 1.89; defer the bump to its own PR).
typst = "0.13.1"
# PDF exporter, released in lockstep with `typst`.
typst-pdf = "0.13.1"
# Bundled font set (DejaVu, Linux Libertine, etc.) compiled into the
# binary. The `fonts` feature is what carries the actual font bytes.
# Bundling is what gives us cross-host reproducibility (CONSTITUTION
# §6.4: same Typst sandbox everywhere) without scanning system fonts.
typst-assets = { version = "0.13.1", features = ["fonts"] }

[dev-dependencies]
serde_json = "1"
# Spawn the built `ferrocv` binary in integration tests to exercise real
# CLI surface (exit codes, stdout/stderr, stdin). Dev-only — must not
# leak into the shipped binary.
assert_cmd = "2"
# Readable substring / predicate assertions on captured stdout/stderr.
# Paired with assert_cmd.
predicates = "3"
