[package]
name = "ferrocv"
version = "0.5.0"
edition = "2024"
rust-version = "1.89"
description = "Render JSON Resume documents to PDF, HTML, and plain text via embedded Typst."
license = "MIT OR Apache-2.0"
repository = "https://github.com/cacack/ferrocv"
readme = "README.md"
keywords = ["resume", "cv", "json-resume", "typst", "pdf"]
categories = ["command-line-utilities"]
include = [
    "src/**/*",
    "assets/schema/**/*",
    "assets/themes/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE-*",
]

[lib]
name = "ferrocv"
path = "src/lib.rs"

[[bin]]
name = "ferrocv"
path = "src/main.rs"

[features]
# Default build is offline: `render` and `validate` compile without any
# network-capable dependency in the graph (CONSTITUTION.md §6.1).
default = []
# Enables `ferrocv theme install`, the sole network-permitted entry
# point per CONSTITUTION.md §6.1 (post-Stage-B amendment). Gates every
# network-capable crate (`ureq`, `flate2`, `tar`, `toml`, `dirs`) AND
# the Rust modules that use them (`src/install/`) so the default build
# contains no network code. Verified in CI via
# `cargo tree --no-default-features`.
install = ["dep:ureq", "dep:flate2", "dep:tar", "dep:toml", "dep:dirs", "dep:tempfile"]

[dependencies]
# CLI argument parsing. Derive API keeps the surface declarative.
clap = { version = "4", features = ["derive"] }
# JSON Schema validator. Default features pull in `reqwest` for remote
# `$ref` resolution; we disable them to uphold CONSTITUTION.md §6
# (no network calls at validate time) since our schema is vendored
# and self-contained.
jsonschema = { version = "0.46", default-features = false }
# CLI-layer error propagation. Library code stays anyhow-free.
anyhow = "1"
serde_json = "1"
# Embedded Typst compiler — produces PDF bytes entirely in-process.
# CONSTITUTION.md §2 forbids subprocessing the `typst` CLI, so we link
# the library directly.
# Typst 0.14.x; typst-pdf and typst-assets track in lockstep.
typst = "0.14.2"
# PDF exporter, released in lockstep with `typst`.
typst-pdf = "0.14.2"
# HTML exporter, released in lockstep with typst.
typst-html = "0.14.2"
# Bundled font set (DejaVu, Linux Libertine, etc.) compiled into the
# binary. The `fonts` feature is what carries the actual font bytes.
# Bundling is what gives us cross-host reproducibility (CONSTITUTION
# §6.4: same Typst sandbox everywhere) without scanning system fonts.
typst-assets = { version = "0.14.2", features = ["fonts"] }

# --- `install` feature: network-capable deps, gated behind the
# `install` Cargo feature so they never enter the default build. Every
# one is `optional = true` so `cargo build` (no features) produces a
# binary with no `ureq`/`flate2`/`tar`/`toml`/`dirs` in its dependency
# graph. CONSTITUTION.md §6.1 (post-Stage-B amendment) requires this
# architectural boundary. Same precedent as the
# `jsonschema = { default-features = false }` line above, which drops
# `reqwest` for the same reason.
#
# `ureq = "3"` default features give us rustls + ring + gzip; NOT
# `native-tls`, NOT `openssl`, NOT `tokio`. Upstream `typst-kit` makes
# the same choice for the same reason. Pin to major-only so patch
# bumps across the 3.x series (which have flirted with aws-lc vs ring
# as default crypto provider) show up in `cargo audit` / `cargo deny`
# review rather than silently shifting our TLS story.
ureq = { version = "3", optional = true }
# Gzip decoder used by the tarball extractor.
flate2 = { version = "1", optional = true }
# Tar archive reader. `unpack()` writes entries to disk; we pair it
# with `flate2::read::GzDecoder` to handle the registry's `.tar.gz`.
tar = { version = "0.4", optional = true }
# TOML parser for `typst.toml` package manifests.
toml = { version = "1.1", optional = true }
# Platform-specific user cache directory (XDG on Linux, Caches on
# macOS, LocalAppData on Windows). Overridable via `FERROCV_CACHE_DIR`
# for tests and power users.
dirs = { version = "6", optional = true }
# Atomic "extract to sibling temp dir then rename" safety for
# concurrent `theme install` invocations. Already present as a
# dev-dep below, but the install pipeline uses it at runtime too; the
# duplicate entry is what Cargo's `optional = true` requires.
tempfile = { version = "3", optional = true }

[dev-dependencies]
serde_json = "1"
# Spawn the built `ferrocv` binary in integration tests to exercise real
# CLI surface (exit codes, stdout/stderr, stdin). Dev-only — must not
# leak into the shipped binary.
assert_cmd = "2"
# Readable substring / predicate assertions on captured stdout/stderr.
# Paired with assert_cmd.
predicates = "3"
# PDF text extraction for golden-file theme tests. Normalized text
# is stable across Typst patch versions where raw PDF bytes are
# not. Dev-dep only — never linked into the shipped binary.
# (Crates.io has no 0.7.x; 0.10 is the current 0.x at the time of
# this commit.)
pdf-extract = "0.10"
# Temp output dirs for render-CLI scenario tests.
tempfile = "3"
